# compact

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  compact.cabal
Data/: Compact.hs
Data/Compact/: Serialize.hs
tests/: compact-test.hs  sample1.hs  sample2.hs
